--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "compression-webpack-plugin": "^4.0.0",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
     "jquery": "^3.4.1",
